# xerotrust

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.rst  CLAUDE.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  release.yml
api-docs/: METHODOLOGY.md  README.md  accounts.md  attachments.md  bankstatements.md  banktransactions.md  banktransfers.md  batchpayments.md  brandingthemes.md  budgets.md  contactgroups.md  contacts.md  creditnotes.md  currencies.md  employees.md  expenseclaims.md  historyandnotes.md  invoicereminders.md  invoices.md  items.md  journals.md  linkedtransactions.md  manualjournals.md  organisation.md  overpayments.md  overview.md  payments.md  paymentservices.md  prepayments.md  purchaseorders.md  quotes.md  receipts.md  releasenotes.md  repeatinginvoices.md  reports.md  requests-and-responses.md  responsecodes.md  taxrates.md  trackingcategories.md  types.md  (+1 more)
docs/: authentication.rst  changes.rst  checks.rst  conf.py  development.rst  export.rst  flattening.rst  index.rst  license.rst  usage.rst
src/xerotrust/: authentication.py  check.py  csv_export.py  exceptions.py  export.py  flatten.py  jsonl.py  main.py  reconcile.py  transform.py
tests/: conftest.py  helpers.py  test_authentication.py  test_check.py  test_csv_export.py  test_exports.py  test_jsonl.py  test_main.py  test_main_check.py  test_main_explore.py  test_main_export.py  test_main_flatten.py  test_main_journals.py  test_main_log_level.py  test_main_login.py  test_main_reconcile.py  test_main_tenants.py  test_transform.py  test_utilities.py
(+75 files in other folders)
