[project]
name = "xerotrust"
version = "0.1.0"
description = "Backups and data dumps for Xero accounts."
readme = "README.rst"
authors = [
    { name = "Chris Withers", email = "chris@withers.org" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "testfixtures>=8.3.0",
]
